--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -111,6 +111,11 @@ $basic-font-color: #1F3F68;
     font-weight: 700;
 }
 
+@mixin gilroy-300 {
+    font-family: 'Gilroy';
+    font-weight: 300;
+}
+
 @mixin gilroy-400 {
     font-family: 'Gilroy';
     font-weight: 400;
@@ -119,6 +124,11 @@ $basic-font-color: #1F3F68;
 @mixin gilroy-500 {
     font-family: 'Gilroy';
     font-weight: 500;
+}
+
+@mixin gilroy-600 {
+    font-family: 'Gilroy';
+    font-weight: 600;
 }
 
 .hero {
@@ -517,6 +527,123 @@ $basic-font-color: #1F3F68;
         letter-spacing: 0.05em;
         color: #FFFFFF;
         opacity: 0.4;
+    }
+}
+
+.modal {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+}
+
+.modal__body {
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+
+.modal__content {
+    background-color: #fff;
+    width: 540px;
+    padding: 56px;
+    box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+    border-radius: 10px;
+    position: relative;
+}
+
+.modal__close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 24px;
+    color: #747474;
+    font-weight: bold;
+    &:hover {
+        color: #000;
+    }
+}
+
+.form__title {
+    h2 {
+        @include gilroy-600;
+    }
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.04em;
+    color: #1F3F68;
+    margin-bottom: 30px;
+}
+
+.form-input {
+    margin-bottom: 72px;
+}
+
+.form-input-item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 32px;
+    &:last-child {
+        margin-bottom: 0;
+    }
+    & input {
+        border-radius: 10px;
+        border: 1px solid #356EAD;
+        padding: 21px 0 21px 42px;
+        opacity: 0.4;
+        &::placeholder {
+            color: #1F3F68;
+            opacity: 0.4;
+            @include gilroy-300;
+            font-size: 16px;
+            line-height: 30px;
+        }
+    }
+    & textarea {
+        border-radius: 10px;
+        border: 1px solid #356EAD;
+        padding: 21px 42px;
+        opacity: 0.4;
+        &::placeholder {
+            color: #1F3F68;
+            opacity: 0.2;
+            @include gilroy-300;
+            font-size: 16px;
+            line-height: 30px;
+        }
+    }
+}
+
+.label {
+    margin-bottom: 8px;
+    @include gilroy-400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.04em;
+    color: #1F3F68;
+}
+
+.form-button {
+    .form-btn {
+        display: block;
+        width: 100%;
+        background: #5A98D0;
+        box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+        border-radius: 10px;
+        padding: 23px;
+        border: 0;
+        color: #fff;
+        @include gilroy-600;
+        font-size: 16px;
+        line-height: 26px;
+        letter-spacing: 0.04em;
     }
 }
 
